# Generic-Linked-List-CPP

./: CMakeLists.txt  almog_tests_part_a.cpp  examDetails.cpp  examDetails.h  sortedList.h
